--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "main": "index.js",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.5.0",
@@ -11,17 +12,42 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "drei": "0.0.54",
-    "react": "^18.2.0",
     "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^8.0.5",
+    "react-icons": "^3.3.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "3.4.1",
     "react-three-fiber": "^4.2.8",
     "redux": "^4.2.0",
-    "redux-persist": "^6.0.0",
+    "redux-persist": "^5.10.0",
     "styled-components": "^5.3.6",
     "three": "^0.117.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.1",
+    "@neutrinojs/copy": "^9.1.0",
+    "@neutrinojs/eslint": "^9.0.0",
+    "@neutrinojs/react": "^9.0.0",
+    "@neutrinojs/style-loader": "^9.5.0",
+    "@typescript-eslint/eslint-plugin": "1.x",
+    "@typescript-eslint/parser": "1.x",
+    "babel-eslint": "10.x",
+    "babel-preset-react-app": "^6.1.0",
+    "compression-webpack-plugin": "^3.1.0",
+    "core-js": "^3",
+    "eslint": "^6.7.2",
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "1.x",
+    "neutrino": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
